refactor: change structure of external and internal APIs

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Vue + TS</title>
   </head>
-  <body>
+  <body style="width: 100%; margin: 0 auto;">
     <div id="app"></div>
     <script type="module" src="/development/main.ts"></script>
   </body>
