feat: start building react integration

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body style="width: 100%; margin: 0 auto;">
     <div id="app"></div>
+    <div id="app-react"></div>
     <script type="module" src="/development/main.ts"></script>
+    <script type="module" src="/development/main.tsx"></script>
   </body>
 </html>
